Use the new window layout